chore: update angular material to fix modal issue

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "angular-chartist.js": "4.2.1",
     "angular-cookies": "1.6.2",
     "angular-hotkeys": "1.7.0",
-    "angular-material": "1.1.4",
+    "angular-material": "^1.1.5",
     "angular-messages": "1.6.2",
     "angular-resource": "1.5.8",
     "angular-sanitize": "1.5.8",
